<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hapticFeedbackEnabled="false"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/story1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:hapticFeedbackEnabled="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="128dp"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/the_star_who_lost_its_sparkle"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:forceHasOverlappingRendering="true"
                    android:text="@string/story1"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/story2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="89dp"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/benny_the_brave_bunny"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/story2"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/story3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="138dp"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/the_snail_who_wanted_to_race"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/story3"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/story4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="74dp"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/the_magic_paintbrush"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/story4"
                    android:textAlignment="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/story5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:clickable="true"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="150dp"
                    android:layout_height="128dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/the_lion_and_the_whisperng_wind"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_weight="1"
                    android:text="@string/story5"
                    android:textAlignment="center" />
            </LinearLayout>

            <Button
                android:id="@+id/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favs" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>